# SoC-Lite-Simulator

./: CMakeLists.txt  README.md
src/: CPU.h  Cache.h  Memory.h  main.cpp  test_cpu.cpp
